Fix the CSS mistakes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <article> class="card">
+    <article class="card">
       <header class="card-head">
         <h2 class="card-title">Stegosaurus</h2>
         <span class="card-label">Plant-eater</span>
