--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="card-head">
       <h2 class="card-title">Stegosaurus</h2>
       <span class="card-label">Plant-eater</span>
-      <img class="img-flex" src="http://placehold.it/640x480" alt="">
+      <img class="img-flex" src="https://placehold.it/640x480" alt="">
     </header>
     <div class="card-body">
       <p>The Stegosaurus is an armoured dinosaur with distinctive back plates and tail spikes.</p>
